syntax = "proto3";

option csharp_namespace = "gRPCClient.Protos";

import "google/protobuf/timestamp.proto";

service UserProtoService {
	rpc GetUser(GetUserRequest) returns (UserResponse);
}

message GetUserRequest {
	string userId = 1;
}

message UserResponse {
	string userId = 1;
	string userName = 2;
}
